use testcontainers properly